# duckdb_fastapi_mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  data_generator.py  docker-compose.yml  get_token.py  mcp_server.py  pyproject.toml  requirements.txt
.github/agents/: sql_agent.agent.md
app/: config.py  db.py  fabric_client.py  main.py  models.py
app/api/: routes_health.py  routes_query.py
app/services/: __init__.py  query_service.py
doc/: MCP_INTEGRATION.md
