[project]
name = "duckdb-query-api"
version = "1.0.0"
description = "Read-only SQL query API for Microsoft Fabric Lakehouse via DuckDB"
authors = [{name = "Your Organization"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/yourusername/duckdb-query-api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: Integration tests that require external services",
    "unit: Unit tests that can run in isolation",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
